--- a/portfolio.html
+++ b/portfolio.html
@@ -3,140 +3,219 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <a href="./index.html">WebStudio</a>
-      <nav>
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="#">Портфоліо</a></li>
-          <li><a href="#">Контакти</a></li>
+    <header class="header">
+      <a class="header-link hover focus active" href="./index.html"
+        >Web<span class="header-link-sp">Studio</span></a
+      >
+      <nav class="header-nav">
+        <ul class="header-nav-list">
+          <li class="header-nav-item">
+            <a class="header-nav-link hover focus active" href="./index.html"
+              >Студія</a
+            >
+          </li>
+          <li class="header-nav-item">
+            <a
+              class="header-nav-link hover focus active current"
+              href="./portfolio.html"
+              >Портфоліо</a
+            >
+          </li>
+          <li class="header-nav-item">
+            <a class="header-nav-link hover focus active" href="#">Контакти</a>
+          </li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="header-list">
+        <li class="header-item">
+          <a
+            class="header-list-link hover focus active"
+            href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="header-item">
+          <a
+            class="header-list-link hover focus active"
+            href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
     <main>
       <section class="portfolio">
-        <ul>
-          <li><button type="button">Усі</button></li>
-          <li><button type="button">Веб-сайти</button></li>
-          <li><button type="button">Додатки</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+        <ul class="portfoio-list">
+          <li class="portfolio-item">
+            <button class="portfolio-btn hover focus active" type="button">
+              Усі
+            </button>
+          </li>
+          <li class="portfolio-item">
+            <button class="portfolio-btn hover focus active" type="button">
+              Веб-сайти
+            </button>
+          </li>
+          <li class="portfolio-item">
+            <button class="portfolio-btn hover focus active" type="button">
+              Додатки
+            </button>
+          </li>
+          <li class="portfolio-item">
+            <button class="portfolio-btn hover focus active" type="button">
+              Дизайн
+            </button>
+          </li>
+          <li class="portfolio-item">
+            <button class="portfolio-btn hover focus active" type="button">
+              Маркетинг
+            </button>
+          </li>
         </ul>
-        <ul>
-          <li>
+        <ul class="portfoio-list">
+          <li class="portfolio-item">
             <img
               src="./images/tehno.jpg"
+              class="portfolio-list-image"
               width="370"
               height="294"
               alt="Технокряк"
             />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <h2 class="portfolio-list-title">Технокряк</h2>
+            <p class="portfolio-list-text">Веб-сайт</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/new_orlean.jpg"
+              class="portfolio-list-image"
               width="370"
               height="294"
               alt="Постер New Orlean vs Golden Star"
             />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <h2 class="portfolio-list-title">
+              Постер New Orlean vs Golden Star
+            </h2>
+            <p class="portfolio-list-text">Дизайн</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/seafood.jpg"
+              class="portfolio-list-image"
               width="370"
               height="294"
               alt="Ресторан Seafood"
             />
-            <h2>Ресторан Seafood</h2>
-            <p>Додаток</p>
+            <h2 class="portfolio-list-title">Ресторан Seafood</h2>
+            <p class="portfolio-list-text">Додаток</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/prime.jpg"
+              class="portfolio-list-image"
               width="370"
               height="294"
               alt="Проєкт Prime"
             />
-            <h2>Проєкт Prime</h2>
-            <p>Маркетинг</p>
+            <h2 class="portfolio-list-title">Проєкт Prime</h2>
+            <p class="portfolio-list-text">Маркетинг</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/boxes.jpg"
+              class="portfolio-list-image"
               width="370"
               height="294"
               alt="Проєкт Boxes"
             />
-            <h2>Проєкт Boxes</h2>
-            <p>Додаток</p>
+            <h2 class="portfolio-list-title">Проєкт Boxes</h2>
+            <p class="portfolio-list-text">Додаток</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/borders.jpg"
+              class="portfolio-list-image"
               width="370"
               height="294"
               alt="Inspiration has no Borders"
             />
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <h2 class="portfolio-list-title">Inspiration has no Borders</h2>
+            <p class="portfolio-list-text">Веб-сайт</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/limited_edition.jpg"
+              class="portfolio-list-image"
               width="370"
               height="294"
               alt="Видання Limited Edition"
             />
-            <h2>Видання Limited Edition</h2>
-            <p>Дизайн</p>
+            <h2 class="portfolio-list-title">Видання Limited Edition</h2>
+            <p class="portfolio-list-text">Дизайн</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/lab.jpg"
+              class="portfolio-list-image"
               width="370"
               height="294"
               alt="Проєкт LAB"
             />
-            <h2>Проєкт LAB</h2>
-            <p>Маркетинг</p>
+            <h2 class="portfolio-list-title">Проєкт LAB</h2>
+            <p class="portfolio-list-text">Маркетинг</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/business.jpg"
+              class="portfolio-list-image"
               width="370"
               height="294"
               alt="Growing Business"
             />
-            <h2>Growing Business</h2>
-            <p>Додаток</p>
+            <h2 class="portfolio-list-title">Growing Business</h2>
+            <p class="portfolio-list-text">Додаток</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="#">WebStudio</a>
-      <address>
-        <ul>
-          <li>
+    <footer class="footer">
+      <a class="footer-link hover focus active" href="./index.html"
+        >Web<span class="footer-link-sp">Studio</span></a
+      >
+      <address class="footer-address">
+        <ul class="footer-address-list">
+          <li class="footer-address-item">
             <a
+              class="footer-address-link footer-address-map hover focus active"
               href="https://goo.gl/maps/1E44ymxB3e4bCkxy7"
               target="_blank"
               rel="noopener noreferrer"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="footer-address-item">
+            <a
+              class="footer-address-link footer-address-contact hover focus active"
+              href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="footer-address-item">
+            <a
+              class="footer-address-link footer-address-contact hover focus active"
+              href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
