--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       <nav class="header-nav">
         <ul class="header-nav-list">
           <li class="header-nav-item">
-            <a class="header-nav-link hover focus active current" href="./index.html"
+            <a
+              class="header-nav-link hover focus active current"
+              href="./index.html"
               >Студія</a
             >
           </li>
@@ -56,7 +58,9 @@
     <main>
       <section class="hero">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="hero-btn" type="button">Замовити послугу</button>
+        <button class="hero-btn hover focus active" type="button">
+          Замовити послугу
+        </button>
       </section>
       <section class="features">
         <!-- <h2>features</h2> -->
