--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -10,211 +11,190 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
   </head>
   <body>
     <header class="header">
-      <a class="header-link hover focus active" href="./index.html"
-        >Web<span class="header-link-sp">Studio</span></a
+      <a class="logo" href="./index.html"
+        >Web<span class="logo-span">Studio</span></a
       >
       <nav class="header-nav">
-        <ul class="header-nav-list">
-          <li class="header-nav-item">
-            <a class="header-nav-link hover focus active" href="./index.html"
-              >Студія</a
-            >
+        <ul class="list">
+          <li>
+            <a class="link" href="./index.html">Студія</a>
           </li>
-          <li class="header-nav-item">
-            <a
-              class="header-nav-link hover focus active current"
-              href="./portfolio.html"
-              >Портфоліо</a
-            >
+          <li>
+            <a class="link current" href="./portfolio.html">Портфоліо</a>
           </li>
-          <li class="header-nav-item">
-            <a class="header-nav-link hover focus active" href="#">Контакти</a>
+          <li>
+            <a class="link" href="#">Контакти</a>
           </li>
         </ul>
       </nav>
-      <ul class="header-list">
-        <li class="header-item">
-          <a
-            class="header-list-link hover focus active"
-            href="mailto:info@devstudio.com"
+      <ul class="contacts list">
+        <li>
+          <a class="link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
-        <li class="header-item">
-          <a
-            class="header-list-link hover focus active"
-            href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
+        <li>
+          <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
     <main>
       <section class="portfolio">
-        <ul class="portfoio-list">
-          <li class="portfolio-item">
-            <button class="portfolio-btn hover focus active" type="button">
-              Усі
-            </button>
+        <h1 class="visually-hidden">Portfolio</h1>
+        <ul class="list">
+          <li>
+            <button class="portfolio-btn" type="button">Усі</button>
           </li>
-          <li class="portfolio-item">
-            <button class="portfolio-btn hover focus active" type="button">
-              Веб-сайти
-            </button>
+          <li>
+            <button class="portfolio-btn" type="button">Веб-сайти</button>
           </li>
-          <li class="portfolio-item">
-            <button class="portfolio-btn hover focus active" type="button">
-              Додатки
-            </button>
+          <li>
+            <button class="portfolio-btn" type="button">Додатки</button>
           </li>
-          <li class="portfolio-item">
-            <button class="portfolio-btn hover focus active" type="button">
-              Дизайн
-            </button>
+          <li>
+            <button class="portfolio-btn" type="button">Дизайн</button>
           </li>
-          <li class="portfolio-item">
-            <button class="portfolio-btn hover focus active" type="button">
-              Маркетинг
-            </button>
+          <li>
+            <button class="portfolio-btn" type="button">Маркетинг</button>
           </li>
         </ul>
-        <ul class="portfoio-list">
-          <li class="portfolio-item">
-            <img
-              src="./images/tehno.jpg"
-              class="portfolio-list-image"
-              width="370"
-              height="294"
-              alt="Технокряк"
-            />
-            <h2 class="portfolio-list-title">Технокряк</h2>
-            <p class="portfolio-list-text">Веб-сайт</p>
+        <ul class="list">
+          <li>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+              <img
+                src="./images/tehno.jpg"
+                width="370"
+                height="294"
+                alt="Технокряк"
+              />
+              <h2 class="title">Технокряк</h2>
+              <p class="text">Веб-сайт</p>
+            </a>
           </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/new_orlean.jpg"
-              class="portfolio-list-image"
-              width="370"
-              height="294"
-              alt="Постер New Orlean vs Golden Star"
-            />
-            <h2 class="portfolio-list-title">
-              Постер New Orlean vs Golden Star
-            </h2>
-            <p class="portfolio-list-text">Дизайн</p>
+          <li>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+              <img
+                src="./images/new_orlean.jpg"
+                width="370"
+                height="294"
+                alt="Постер New Orlean vs Golden Star"
+              />
+              <h2 class="title">Постер New Orlean vs Golden Star</h2>
+              <p class="text">Дизайн</p>
+            </a>
           </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/seafood.jpg"
-              class="portfolio-list-image"
-              width="370"
-              height="294"
-              alt="Ресторан Seafood"
-            />
-            <h2 class="portfolio-list-title">Ресторан Seafood</h2>
-            <p class="portfolio-list-text">Додаток</p>
+          <li>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+              <img
+                src="./images/seafood.jpg"
+                width="370"
+                height="294"
+                alt="Ресторан Seafood"
+              />
+              <h2 class="title">Ресторан Seafood</h2>
+              <p class="text">Додаток</p>
+            </a>
           </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/prime.jpg"
-              class="portfolio-list-image"
-              width="370"
-              height="294"
-              alt="Проєкт Prime"
-            />
-            <h2 class="portfolio-list-title">Проєкт Prime</h2>
-            <p class="portfolio-list-text">Маркетинг</p>
+          <li>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+              <img
+                src="./images/prime.jpg"
+                width="370"
+                height="294"
+                alt="Проєкт Prime"
+              />
+              <h2 class="title">Проєкт Prime</h2>
+              <p class="text">Маркетинг</p>
+            </a>
           </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/boxes.jpg"
-              class="portfolio-list-image"
-              width="370"
-              height="294"
-              alt="Проєкт Boxes"
-            />
-            <h2 class="portfolio-list-title">Проєкт Boxes</h2>
-            <p class="portfolio-list-text">Додаток</p>
+          <li>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+              <img
+                src="./images/boxes.jpg"
+                width="370"
+                height="294"
+                alt="Проєкт Boxes"
+              />
+              <h2 class="title">Проєкт Boxes</h2>
+              <p class="text">Додаток</p>
+            </a>
           </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/borders.jpg"
-              class="portfolio-list-image"
-              width="370"
-              height="294"
-              alt="Inspiration has no Borders"
-            />
-            <h2 class="portfolio-list-title">Inspiration has no Borders</h2>
-            <p class="portfolio-list-text">Веб-сайт</p>
+          <li>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+              <img
+                src="./images/borders.jpg"
+                width="370"
+                height="294"
+                alt="Inspiration has no Borders"
+              />
+              <h2 class="title">Inspiration has no Borders</h2>
+              <p class="text">Веб-сайт</p>
+            </a>
           </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/limited_edition.jpg"
-              class="portfolio-list-image"
-              width="370"
-              height="294"
-              alt="Видання Limited Edition"
-            />
-            <h2 class="portfolio-list-title">Видання Limited Edition</h2>
-            <p class="portfolio-list-text">Дизайн</p>
+          <li>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+              <img
+                src="./images/limited_edition.jpg"
+                width="370"
+                height="294"
+                alt="Видання Limited Edition"
+              />
+              <h2 class="title">Видання Limited Edition</h2>
+              <p class="text">Дизайн</p>
+            </a>
           </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/lab.jpg"
-              class="portfolio-list-image"
-              width="370"
-              height="294"
-              alt="Проєкт LAB"
-            />
-            <h2 class="portfolio-list-title">Проєкт LAB</h2>
-            <p class="portfolio-list-text">Маркетинг</p>
+          <li>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+              <img
+                src="./images/lab.jpg"
+                width="370"
+                height="294"
+                alt="Проєкт LAB"
+              />
+              <h2 class="title">Проєкт LAB</h2>
+              <p class="text">Маркетинг</p>
+            </a>
           </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/business.jpg"
-              class="portfolio-list-image"
-              width="370"
-              height="294"
-              alt="Growing Business"
-            />
-            <h2 class="portfolio-list-title">Growing Business</h2>
-            <p class="portfolio-list-text">Додаток</p>
+          <li>
+            <a href="http://" target="_blank" rel="noopener noreferrer">
+              <img
+                src="./images/business.jpg"
+                width="370"
+                height="294"
+                alt="Growing Business"
+              />
+              <h2 class="title">Growing Business</h2>
+              <p class="text">Додаток</p>
+            </a>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-link hover focus active" href="./index.html"
-        >Web<span class="footer-link-sp">Studio</span></a
+      <a class="logo" href="./index.html"
+        >Web<span class="logo-span">Studio</span></a
       >
       <address class="footer-address">
-        <ul class="footer-address-list">
-          <li class="footer-address-item">
+        <ul class="list">
+          <li>
             <a
-              class="footer-address-link footer-address-map hover focus active"
+              class="link map"
               href="https://goo.gl/maps/1E44ymxB3e4bCkxy7"
               target="_blank"
               rel="noopener noreferrer"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li class="footer-address-item">
-            <a
-              class="footer-address-link footer-address-contact hover focus active"
-              href="mailto:info@devstudio.com"
+          <li>
+            <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="footer-address-item">
-            <a
-              class="footer-address-link footer-address-contact hover focus active"
-              href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
+          <li>
+            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
